# my_world

./: README.md  README_template.md  log.txt  repos.txt
c/acazuc_fuse_mpq/: .gitignore  Makefile.am  configure.ac
c/acazuc_fuse_mpq/src/: main.c
c/acazuc_gfx/: Makefile.am
c/acazuc_gfx/src/: devices.h  window.c  window_vtable.h
c/acazuc_gfx/src/devices/: d3d9.c  gl.c  gl4.c  vk.c
c/acazuc_gfx/src/windows/: d3d.c  emscripten.c  gl_glfw.c  glfw.h  vk_glfw.c  vk_win32.c  wgl.c  x11.h
c/acazuc_jka/: .gitignore  Makefile.am
c/acazuc_jka/libjka/: bilinear.c  libjka.map  resample.c  stream.c
c/acazuc_jkgl/: .gitignore  configure.ac
c/acazuc_jkgl/gl/: client_arrays.c  fog.c  get.c  immediate.c  libGL.map  misc.c
c/acazuc_jkgl/gl/jit/: texture_fetch.c
c/acazuc_jkgl/gl/rast/: line.c  texture.c  vert.c
c/acazuc_jkgl/gl/texture/: bind_texture.c  gen_textures.c  parameter.c  tex_image_2d.c
c/acazuc_jkgl/glu/: libGLU.map
c/acazuc_jkgl/include/: fixed.h  fnv.h  gl.h  internal.h  mat4.h  utils.h
c/acazuc_jkgl/tests/: demo.c  immediate.c
c/acazuc_jkx/: .gitignore  Makefile.am  configure.ac
c/acazuc_jkx/X11/: X.h  Xlib-xcb.c  Xlib-xcb.h  Xlib.c  Xlib.h  Xlibint.c  Xlibint.h  Xutil.c  Xutil.h  cursorfont.h  keysym.h  keysymdef.h  libX11-xcb.map  x11-xcb.pc.in  x11.pc.in  xext.pc.in
c/acazuc_jkx/X11/extensions/: XShm.c  XShm.h  Xdbe.c  Xdbe.h  Xrender.c  Xrender.h
c/acazuc_jkx/src/: xdpyinfo.c  xev.c  xkbbell.c  xkbvleds.c  xlsatoms.c  xlsfonts.c  xmousepos.c  xprop.c  xsysmon.c  xwininfo.c
c/acazuc_jkx/src/xsrv/: backend.c  client.c  colormap.c  cursor.c  drawable.c  font.c  framebuffer.c  gcontext.c  main.c  object.c  pixmap.c  poly.c  proto.c  ringbuf.c  ringbuf.h  window.c  xcursor.c  xsrv.h
c/acazuc_jkx/src/xterm/: main.c  ringbuf.c
c/acazuc_jkx/src/xwm/: assets.c  main.c
c/acazuc_jkx/tests/: anim.c  background_pixel.c  border_pixmap.c  circulate.c  cursors.c  dbe.c  draw.c  getimage.c  glx.c  grabbutton.c  keyboard.c  move.c  pointer.c  setmousepos.c  shmget.c  shmput.c  tree.c  xrender.c
c/acazuc_jkx/xcb/: buf.c  buf.h  dbe.c  glx.c  glx.h  libxcb-dbe.map  libxcb-glx.map  libxcb-shm.map  libxcb.map  render.c  render.h  shm.c  shm.h  xcb-dbe.pc.in  xcb-glx.pc.in  xcb-render.pc.in  xcb-shm.pc.in  xcb.c  xcb.h  xcb.pc.in  xcbext.h  xproto.c
c/acazuc_libwow/: Makefile.am  configure.ac
c/acazuc_libwow/src/: blp.c  blp.h  bls.c  bls.h  common.h  dbc.h  m2.c  m2.h  mpq.c  toc.h  trs.c  wdb.c  wdl.c  wdl.h  wdt.h  wmo.c  wmo_group.c  zmp.c  zmp.h
c/acazuc_wow-rs/: .gitignore  Cargo.toml  README.md
c/acazuc_wow-rs/libwow/: Cargo.toml
c/acazuc_wow-rs/libwow/src/: adt.rs  blp.rs  lib.rs  m2.rs  mpq.rs  wdl.rs  wdt.rs  wmo.rs  wmo_group.rs
c/acazuc_wow-rs/src/: assets.rs  liquid.rs  main.rs  mapobj.rs  math.rs  terrain.rs  texture.rs  window.rs  world.rs  wow.rs
c/acazuc_wow-rs/src/shaders/: magma.wgsl  mapobj.wgsl  terrain.wgsl  water.wgsl
c/acazuc_wow_explorer/: .gitignore  Makefile.am  configure.ac
c/acazuc_wow_explorer/src/: explorer.c  explorer.h  nodes.c  nodes.h  tree.c  tree.h
c/acazuc_wow_explorer/src/displays/: adt.c  blp.c  bls.c  dbc.c  dir.c  display.c  display.h  img.c  m2.c  table_macro.h  txt.c  wdl.c  wdt.c  wmo.c  wmo_group.c
c/acazuc_wow_explorer/src/utils/: dx9_shader.c  nv_register_shader.c  nv_texture_shader.c  shaders.h
c/gtker_wow_messages_c/: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  todo.md
c/gtker_wow_messages_c/examples/: CMakeLists.txt
c/gtker_wow_messages_c/examples/vanilla/: CMakeLists.txt
c/gtker_wow_messages_c/generator/: login_utils.py  main.py  print_achievement_done_array.py  print_achievement_in_progress_array.py  print_addon_array.py  print_aura_mask.py  print_cache_mask.py  print_enchant_mask.py  print_enum.py  print_inspect_talent_gear_mask.py  print_update_mask.py  util.py  writer.py
c/gtker_wow_messages_c/generator/print_struct/: __init__.py  print_free.py  print_members.py  print_read.py  print_size.py  print_tests.py  print_write.py  struct_util.py
c/gtker_wow_messages_c/test_utils/: test_utils.c  test_utils.h
c/gtker_wow_messages_c/wow_login_messages_c/: CMakeLists.txt
c/gtker_wow_messages_c/wow_login_messages_c/src/: all.test.c  login.c  util.h
c/gtker_wow_messages_c/wow_login_messages_cpp/: CMakeLists.txt
c/gtker_wow_messages_c/wow_login_messages_cpp/src/: all.test.cpp  login.cpp  util.hpp
c/gtker_wow_messages_c/wow_world_messages_c/: CMakeLists.txt
c/gtker_wow_messages_c/wow_world_messages_c/src/: all.c  puff.c  tbc.c  tbc.test.c  util.c  util.h  vanilla.c  vanilla.test.c  wrath.c  wrath.test.c
c/gtker_wow_messages_c/wow_world_messages_cpp/: CMakeLists.txt
c/gtker_wow_messages_c/wow_world_messages_cpp/src/: all.cpp  puff.c  tbc.cpp  tbc.test.cpp  util.cpp  util.hpp  vanilla.cpp  vanilla.test.cpp  wrath.cpp  wrath.test.cpp
c/gtker_wow_srp_c/: CMakeLists.txt  Cargo.toml  Config.cmake.in  README.md  build.rs  cbindgen.toml  generate.py
c/gtker_wow_srp_c/include/wow_srp/: client.h  server.h  tbc.h  vanilla.h  (+2 more)
c/gtker_wow_srp_c/src/: lib.rs  util.rs
c/gtker_wow_srp_c/wow_srp_cpp/: CMakeLists.txt
rust/glkrlos_wowparser/: Cargo.toml
rust/glkrlos_wowparser/src/: findfiles.rs  log.rs
rust/gtker_warthog-wow/: Cargo.toml  topics.txt
rust/gtker_warthog-wow/warthog_lib/: Cargo.toml
rust/gtker_warthog-wow/warthog_messages/: Cargo.toml  messages.md
rust/gtker_warthog-wow/warthog_wow/: Cargo.toml
rust/gtker_warthog-wow/wow_client/: Cargo.toml
rust/gtker_wowdbdefs-rs/: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  pre-release.sh  release.toml
rust/gtker_wowdbdefs-rs/src/: error.rs  lib.rs  parser.rs  types.rs  write_to_file.rs  writer.rs
testing/wubaolin2009_Wow-3D-viewer/: .gitignore  CMakeLists.txt  CharControl.h  GenerateDiffs.ps1  Ray.cpp  Ray.h  animated.cpp  animated.h  bone.cpp  bone.h  camera.h  enums.h  item.cpp  main_test.cpp  matrix.h  mpq.h  raw_animated.h
testing/wubaolin2009_Wow-3D-viewer/wow_3d_diffs/: animated._h.diff  animated.diff  bone._h.diff  bone.diff  main_test.diff
(+3457 files in other folders)
