[package]
name = "wow-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = "0.24.2"
libwow = { path = "libwow" }
pollster = { version = "0.3.0", features = ["macro"] }
rayon = "1.8.0"
wgpu = "0.18.0"
winit = { version = "0.29.3", features = ["rwh_05"] }

[profile.release]
lto = true
codegen-units = 1
