[package]
name = "wowparser4"
version = "4.0.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
chrono = "0.4"
crossterm = "0.27.0"
indicatif = "0.17.6"
console = "0.15.7"
roxmltree = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"

[build-dependencies]

[profile.release]
opt-level = "z"
debug = false
